2015-04-12	--	v0.0.1	-- Initial release.
2015-04-12	--	v0.1.0	-- First code commit
2015-04-12	--	v0.2.0	-- Change on requirements, package extension, etc.
2015-04-12	--	v0.2.1	-- Added module field
2015-04-12	--	v0.2.2	-- Updated requirements
2015-06-19	--	v0.3.0	-- Updated progress functions and history field
2015-06-19	--	v0.3.1	-- Version merge
2015-06-19	--	v0.3.1a	-- Updated classifier for Windows
2015-06-19	--	v0.3.2	-- Bugfix
2015-06-19	--	v0.3.3	-- Small enhancements
2015-11-12	--	v0.3.4-stable	-- Minor changes
2015-11-12	--	v0.3.5-stable	-- Change merge
2015-11-12	--	v0.3.5a-stable	-- build tools update
2015-11-13	--	v0.3.6-stable	-- misc
2015-11-13	--	v0.3.7-stable	-- Added tbx as a dependency
2015-11-13	--	v0.3.8-stable	-- Deb dependencies update
2016-02-14	--	v0.4.0-stable	-- Timeout + TTL fields on job class