@@ -1,1 +1,1 @@
-0.4.0-stable
+0.5.0-stable
