@@ -15,3 +15,5 @@
 2015-11-13	--	v0.3.7-stable	-- Added tbx as a dependency
 2015-11-13	--	v0.3.8-stable	-- Deb dependencies update
 2016-02-14	--	v0.4.0-stable	-- Timeout + TTL fields on job class
+
+2016-02-12	--	v0.5.0-stable	-- New Timeout + TTL features + Client information upload + Client Status
